--- a/.lodestar/spec.yaml
+++ b/.lodestar/spec.yaml
@@ -1071,3 +1071,18 @@ tasks:
     status: verified
     created_at: '2025-12-29T16:29:21.703547+00:00'
     updated_at: '2025-12-29T16:30:05.394816+00:00'
+  T001:
+    title: Enable dark light theme
+    description: Implement dark/light theme toggle and support in the UI.
+    acceptance_criteria: []
+    depends_on: []
+    labels: []
+    locks: []
+    priority: 100
+    status: verified
+    created_at: '2025-12-30T04:06:00.377411+00:00'
+    updated_at: '2025-12-30T04:12:22.788497+00:00'
+    completed_by: A750D4CA0
+    completed_at: &id001 2025-12-30 04:12:22.788497+00:00
+    verified_by: A750D4CA0
+    verified_at: *id001
