chore: prepare for PyPI publishing
- Add frontend build to CI workflow
- Add frontend build step to publish workflow
- Configure sdist to include frontend source
- Add MANIFEST.in for source distribution
- Move schema docs to docs/ folder
- Remove internal development docs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,17 @@ lsspy = "lsspy.cli:main"
 packages = ["src/lsspy"]
 artifacts = ["src/lsspy/static/**/*"]
 
+[tool.hatch.build.targets.sdist]
+include = [
+    "/src",
+    "/tests",
+    "/frontend",
+    "/README.md",
+    "/CHANGELOG.md",
+    "/LICENSE",
+]
+
+
 [tool.ruff]
 line-length = 100
 target-version = "py312"
