--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,6 +16,28 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
+
+      - name: Install frontend dependencies
+        working-directory: frontend
+        run: npm ci
+
+      - name: Build frontend
+        working-directory: frontend
+        run: npm run build
+
+      - name: Copy frontend to static directory
+        run: |
+          mkdir -p src/lsspy/static
+          cp frontend/dist/index.html src/lsspy/static/index.html
+          echo "Frontend built and copied to src/lsspy/static/"
+          ls -la src/lsspy/static/
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -28,6 +50,10 @@ jobs:
 
       - name: Build package
         run: python -m build
+
+      - name: Verify static files in wheel
+        run: |
+          python -c "import zipfile; z = zipfile.ZipFile(list(__import__('pathlib').Path('dist').glob('*.whl'))[0]); files = [n for n in z.namelist() if 'static' in n]; print('Static files in wheel:', files); assert len(files) > 0, 'No static files found in wheel!'"
 
       - name: Publish package to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
