--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "lsspy"
+name = "lsspy-cli"
 version = "0.1.0"
 description = "Real-time visualization dashboard for Lodestar-managed repositories"
 readme = "README.md"
